--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <hr>
         <p>Datos del pedido</p>
         <div class="datos-pedido">
-            <label for="nombre">Nombre del libro</label>
-            <input type="text" name="nombre" id="nombre"> <br>
+            <label for="titulo">Título del libro</label>
+            <input type="text" name="titulo" id="titulo"> <br>
             <label for="autor">Autor</label>
             <input type="text" name="autor" id="autor"><br>
             <label for="direccion">Dirección de envío</label>
