--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Delivery de compra de libros</h1>
         <hr>
-        <p>Datos del pedido</p>
+        <h3>Datos del pedido</h3>
         <div class="datos-pedido">
             <label for="titulo">Título del libro</label>
             <input type="text" name="titulo" id="titulo"> <br>
